--- a/Olhuz/App.xaml
+++ b/Olhuz/App.xaml
@@ -6,7 +6,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <!----> Importa os dicionários de recursos para cores e estilos -->
+                <!-- Importa os dicionários de recursos para cores e estilos -->
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
