Atualizações de temas
Alterando alguns elementos de acordo com o tema (claro ou escuro)

--- a/Olhuz/Components/HeaderView.xaml
+++ b/Olhuz/Components/HeaderView.xaml
@@ -12,7 +12,7 @@
         <Label
             Text="{Binding Title, Source={RelativeSource AncestorType={x:Type ContentPage}}}"
             FontSize="50"
-            TextColor="Black"
+            TextColor="{AppThemeBinding Light={StaticResource Black}, Dark={StaticResource White}}"
             VerticalOptions="End"
             FontAttributes="Bold"/>
     </StackLayout>
