--- a/Olhuz/Views/MyAccountPage.xaml
+++ b/Olhuz/Views/MyAccountPage.xaml
@@ -38,11 +38,11 @@
 						</Border>
 
 						<VerticalStackLayout Grid.Column="1" Spacing="16" VerticalOptions="Center">
-							<Label x:Name="NameLabel" Text="Nome: " FontSize="22" TextColor="Black"/>
+                            <Label x:Name="NameLabel" Text="Nome: " FontSize="22" TextColor="{AppThemeBinding Light={StaticResource ColorBlack}, Dark={StaticResource ColorWhite}}"/>
 
-							<Label x:Name="BirthDateLabel" Text="Data de Nascimento: " FontSize="22" TextColor="Black"/>
+                            <Label x:Name="BirthDateLabel" Text="Data de Nascimento: " FontSize="22" TextColor="{AppThemeBinding Light={StaticResource ColorBlack}, Dark={StaticResource ColorWhite}}"/>
 
-							<Label x:Name="EmailLabel" Text="Email: " FontSize="22" TextColor="Black"/>
+                            <Label x:Name="EmailLabel" Text="Email: " FontSize="22" TextColor="{AppThemeBinding Light={StaticResource ColorBlack}, Dark={StaticResource ColorWhite}}"/>
 						</VerticalStackLayout>
 					</HorizontalStackLayout>
 				</Border>
@@ -67,12 +67,12 @@
 
 				<Border Style="{StaticResource CardBorderStyle}">
 					<VerticalStackLayout Grid.Column="1" Spacing="16">
-						<Label x:Name="VersaoLabel" Text="" FontSize="22" TextColor="Black"/>
+                        <Label x:Name="VersaoLabel" Text="" FontSize="22" TextColor="{AppThemeBinding Light={StaticResource ColorBlack}, Dark={StaticResource ColorWhite}}"/>
 
 						<Label>
 							<Label.FormattedText>
 								<FormattedString>
-									<Span  x:Name="TermosLabel" Text="Termos de privacide" FontSize="22" TextColor="Black" TextDecorations="Underline">
+                                    <Span  x:Name="TermosLabel" Text="Termos de privacide" FontSize="22" TextColor="{AppThemeBinding Light={StaticResource ColorBlack}, Dark={StaticResource ColorWhite}}" TextDecorations="Underline">
 										<Span.GestureRecognizers>
 											<TapGestureRecognizer Tapped="PoliticaDePrivacidadeTapped"/>
 										</Span.GestureRecognizers>
@@ -84,7 +84,7 @@
 						<Label>
 							<Label.FormattedText>
 								<FormattedString>
-									<Span x:Name="SuporteLabel" Text="Suporte" FontSize="22" TextColor="Black" TextDecorations="Underline">
+                                    <Span x:Name="SuporteLabel" Text="Suporte" FontSize="22" TextColor="{AppThemeBinding Light={StaticResource ColorBlack}, Dark={StaticResource ColorWhite}}" TextDecorations="Underline">
 										<Span.GestureRecognizers>
 											<TapGestureRecognizer Tapped="SuporteTapped"/>
 										</Span.GestureRecognizers>
